Ahora, inyecta el servicio del carrito en el componente del encabezado y usa el método getCartItemCount para obtener el número de artículos.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,7 +41,7 @@
             <app-switch-lang></app-switch-lang>
             <div class="allIcon">
                 <i class="fas fa-shopping-cart"></i>
-                <span class="cart-count">0</span>
+                <span class="cart-count">{{ cartCount }}</span>
             </div>
             <app-menuburger></app-menuburger>
         </div>
