añadir el icono Home

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -114,6 +114,11 @@ footer section {
   font-weight: bold;
 }
 
+.headerONE{
+  flex: 1 1 auto;
+  padding: 15px;
+}
+
 .headerFor{
   display: flex;
   align-items: end;
