--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,22 @@
 <main>
 
     <header class="brand-name containerHeader menus">
-        <div class="headerThree">
+        <div class="headerONE">
             <nav class="flex-header-row">
                 <a class="spanMHS menu__link" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
                     routerLink="/">
-                    {{'Home.Title'| translate}}
+                    <i class="fas fa-home"></i>
+                    
                 </a>
+            </nav>
+        </div>
+        <div class="headerThree">
+            <nav class="flex-header-row">
+                <!-- <a class="spanMHS menu__link" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                    routerLink="/">
+                    <i class="fas fa-home"></i>
+                    
+                </a> -->
                 <a class="spanMHS menu__link" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
                     routerLink="/blog">
                     {{'Blog.Title'|translate}}
@@ -21,18 +31,6 @@
                 </a>
 
             </nav>
-            <!-- <nav class="flex-header-row">
-
-    
-            </nav> -->
-            <!-- <nav class="flex-header-row">
-
-
-            </nav>
-            <nav class="flex-header-row">
-
-
-            </nav> -->
         </div>
 
 
