--- a/src/app/housing-location/housing-location.component.html
+++ b/src/app/housing-location/housing-location.component.html
@@ -3,4 +3,5 @@
     <h2 class="listing-heading">{{ housingLocation.name }}</h2>
     <p class="listing-location">{{ housingLocation.city}}, {{housingLocation.state }}</p>
     <a [routerLink]="['/details', housingLocation.id]">Learn More</a>
+    <app-add-cart></app-add-cart>
   </section>
