Crear el Botón "Añadir al Carrito" con el componente AddCart y la interfaz del articulo a añadir al carrito

--- a/src/app/functionalities/add-cart/add-cart.component.html
+++ b/src/app/functionalities/add-cart/add-cart.component.html
@@ -1,1 +1,4 @@
-<p>add-cart works!</p>
+<div *ngFor="let product of products" class="product">
+
+    <button (click)="addToCart(product)">Añadir al Carrito</button>
+</div>
