--- a/src/app/cart/confirm-step/confirm-step.component.html
+++ b/src/app/cart/confirm-step/confirm-step.component.html
@@ -1,1 +1,5 @@
-<p>confirm-step works!</p>
+<div class="confirm-step">
+    <h3>Confirmar Pedido</h3>
+    <!-- Contenido de confirmación -->
+    <button (click)="next()">Siguiente</button>
+  </div>
