--- a/src/app/cart/confirmation-step/confirmation-step.component.html
+++ b/src/app/cart/confirmation-step/confirmation-step.component.html
@@ -1,1 +1,4 @@
-<p>confirmation-step works!</p>
+<div class="confirmation-step">
+    <h3>Gracias por tu compra</h3>
+    <p>Tu pedido ha sido procesado exitosamente.</p>
+  </div>
