--- a/src/app/cart/validate-step/validate-step.component.html
+++ b/src/app/cart/validate-step/validate-step.component.html
@@ -1,1 +1,5 @@
-<p>validate-step works!</p>
+<div class="validate-step">
+    <h3>Validar Pedido</h3>
+    <!-- Contenido de validación -->
+    <button (click)="next()">Siguiente</button>
+  </div>
