añadir el componente add-Cart al componente detial de los produtos Miel

--- a/src/app/products/details/details.component.html
+++ b/src/app/products/details/details.component.html
@@ -31,6 +31,7 @@
             <p class="">Precio: {{housingLocation?.price}}</p>
             <p>Ubicación: {{housingLocation?.state}}</p>
             <p>Categoria: {{housingLocation?.category}}</p>
+            <app-add-cart></app-add-cart>
 
           </section>
 
