añadir el componente add-Cart al componente Detail-Honey, para poder añadir articulos a la cesta

--- a/src/app/products/material-honey/details-material/details-material.component.html
+++ b/src/app/products/material-honey/details-material/details-material.component.html
@@ -10,14 +10,9 @@
                     <li>Ubicación: {{materialHoney?.ubication}}</li>
                     <li>duration: {{materialHoney?.duration}}</li>
                 </ul>
+                <app-add-cart></app-add-cart>
             </section>
 
-            <section>
-                <h1>Es una prueba</h1>
-                <p>A la espra de definir y preparar el resto de tipos De momemnto solo tengo lso benificios de la miel
-                    Milaflores
-                </p>
-            </section>
         </div>
 
         <div>
