añadir el componente add-cart a la lista de productos de material-Honey

--- a/src/app/products/material-honey/material-honey.component.html
+++ b/src/app/products/material-honey/material-honey.component.html
@@ -3,4 +3,5 @@
     <h2 class="listing-heading">{{ materialHoney.title }}</h2>
     <p class="listing-location">{{ materialHoney.ubication}}, {{materialHoney.price }}</p>
     <a [routerLink]="['/detailsMaterial', materialHoney.id]">Learn More</a>
+    <app-add-cart></app-add-cart>
   </section>
