--- a/src/app/cart/confirmation-step/confirmation-step.component.html
+++ b/src/app/cart/confirmation-step/confirmation-step.component.html
@@ -1,5 +1,24 @@
-<div class="confirmation-step">
-    <h3>Gracias por tu compra</h3>
-    <p>Tu pedido ha sido procesado exitosamente.</p>
-    <button class="btn-finish" (click)="finishPurchase()">Finalizar</button>
+<div class="confirmation">
+  <h2>Confirmación</h2>
+  <div>
+    <h3>Datos Personales</h3>
+    <p>Nombre: {{ personalInfo.name }}</p>
+    <p>Dirección: {{ personalInfo.address }}</p>
+    <p>Email: {{ personalInfo.email }}</p>
+    <p>Teléfono: {{ personalInfo.phone }}</p>
   </div>
+  
+  <div>
+    <h3>Artículos en el Carrito</h3>
+    <ul>
+      <li *ngFor="let item of cartItems" class="cart-item">
+        <div class="cart-item-details">
+          {{ item.name }} - Cantidad: {{ item.quantity }} - Peso: {{ item.weight }} kg - Precio: {{ item.price }} €
+        </div>
+      </li>
+    </ul>
+    <h3>Total a Pagar: {{ totalPrice }} €</h3>
+  </div>
+
+  <button class="btn-finish" (click)="finishPurchase()">Finalizar</button>
+</div>
