preparar el componente confitmacion y recuperar los datos recogido desde el componente "Personal-info"

--- a/src/app/cart/confirm-step/confirm-step.component.html
+++ b/src/app/cart/confirm-step/confirm-step.component.html
@@ -1,5 +1,23 @@
-<div class="confirm-step">
+<div class="confirmation">
     <h3>Confirmar Pedido</h3>
-    <!-- Contenido de confirmación -->
+    <div>
+      <h3>Datos Personales</h3>
+      <p>Nombre: {{ personalInfo.name }}</p>
+      <p>Dirección: {{ personalInfo.address }}</p>
+      <p>Email: {{ personalInfo.email }}</p>
+      <p>Teléfono: {{ personalInfo.phone }}</p>
+    </div>
+    
+    <div>
+      <h3>Artículos en el Carrito</h3>
+      <ul>
+        <li *ngFor="let item of cartItems" class="cart-item">
+          <div class="cart-item-details">
+            {{ item.name }} - Cantidad: {{ item.quantity }} - Peso: {{ item.weight }} kg - Precio: {{ item.price }} €
+          </div>
+        </li>
+      </ul>
+      <h3>Total a Pagar: {{ totalPrice }} €</h3>
+    </div>
     <button (click)="next()">Siguiente</button>
   </div>
