--- a/src/app/cart/personal-info-step/personal-info-step.component.html
+++ b/src/app/cart/personal-info-step/personal-info-step.component.html
@@ -5,6 +5,21 @@
       <input id="name" name="name" [(ngModel)]="personalInfo.name" required>
       <label for="address">Dirección:</label>
       <input id="address" name="address" [(ngModel)]="personalInfo.address" required>
+      <div class="payment-method">
+        <h4>Modo de Pago:</h4>
+        <label>
+          <input type="radio" name="paymentMethod" [(ngModel)]="personalInfo.paymentMethod" value="Tarjeta" required>
+          <i class="fas fa-credit-card"></i> Tarjeta
+        </label>
+        <label>
+          <input type="radio" name="paymentMethod" [(ngModel)]="personalInfo.paymentMethod" value="PayPal">
+          <i class="fab fa-paypal"></i> PayPal
+        </label>
+        <label>
+          <input type="radio" name="paymentMethod" [(ngModel)]="personalInfo.paymentMethod" value="Contra Reembolso">
+          <i class="fas fa-money-bill-wave"></i> Contra Reembolso
+        </label>
+      </div>
       <button type="submit">Continuar</button>
     </form>
   </div>
