--- a/src/app/cart/personal-info-step/personal-info-step.component.css
+++ b/src/app/cart/personal-info-step/personal-info-step.component.css
@@ -6,23 +6,67 @@
 
 .personal-info-step form {
   width: 100%;
-  max-width: 600px;
+  max-width: 400px;
+  margin-top: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.personal-info-step label,
-.personal-info-step input {
-  width: 100%;
+.personal-info-step h3 {
+  margin-bottom: 15px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
   display: block;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  font-weight: bold;
 }
 
-.personal-info-step input {
+.form-group input[type="text"],
+.form-group input[type="email"] {
+  width: calc(100% - 10px);
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
 
-.personal-info-step button {
+.payment-method {
+  width: 100%;
+}
+
+.payment-option {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.payment-option input[type="radio"] {
+  margin-right: 10px;
+}
+
+.payment-option i {
+  font-size: 1.2em;
+}
+
+.payment-option .fa-credit-card {
+  color: var(--honey-color); /* Color para Tarjeta */
+}
+
+.payment-option .fa-paypal {
+  color: #003087; /* Color para PayPal */
+}
+
+.payment-option .fa-money-bill-wave {
+  color: var(--honey-color); /* Color para Contra Reembolso */
+}
+
+button[type="submit"] {
   margin-top: 20px;
   padding: 10px 20px;
   background-color: #4caf50;
@@ -32,48 +76,32 @@
   cursor: pointer;
 }
 
-.personal-info-step button:hover {
+button[type="submit"]:hover {
   background-color: #45a049;
 }
 
 
-.payment-method {
-  margin-top: 15px;
+.invalid-feedback {
+  color: red;
+  font-size: 0.8em;
+  margin-top: 5px;
 }
-
-.payment-method h4 {
-  margin-bottom: 10px;
-}
-
-.payment-method label {
-  display: block;
-  margin-bottom: 5px;
-}
-
-/* Estilos específicos para los iconos */
-.payment-method .fa-credit-card {
-  color: #007bff; /* Color para Tarjeta */
-}
-
-.payment-method .fa-paypal {
-  color: #003087; /* Color para PayPal */
-}
-
-.payment-method .fa-money-bill-wave {
-  color: #28a745; /* Color para Contra Reembolso */
-}
-
 /* Media Queries for Responsiveness */
 @media (max-width: 768px) {
-  .personal-info-step button {
-    width: 100%;
-  }
   .personal-info-step form {
     width: 100%;
     align-items: center;
   }
 
   .personal-info-step input {
+    width: 100%;
+  }
+
+  .payment-method {
+    width: 100%;
+  }
+
+  button[type="submit"] {
     width: 100%;
   }
 }
