Visualizar el metod de pago

--- a/src/app/cart/confirm-step/confirm-step.component.html
+++ b/src/app/cart/confirm-step/confirm-step.component.html
@@ -6,6 +6,7 @@
       <p>Dirección: {{ personalInfo.address }}</p>
       <p>Email: {{ personalInfo.email }}</p>
       <p>Teléfono: {{ personalInfo.phone }}</p>
+      <p>Metodo de pago: {{ personalInfo.paymentMethod }}</p>
     </div>
     
     <div>
