--- a/src/app/cart/payment-step/payment-step.component.html
+++ b/src/app/cart/payment-step/payment-step.component.html
@@ -1,10 +1,24 @@
-<div class="payment-step">
-    <h3>Pago</h3>
-    <form (ngSubmit)="onSubmit()">
-      <label for="cardNumber">Número de Tarjeta:</label>
-      <input id="cardNumber" name="cardNumber" [(ngModel)]="paymentInfo.cardNumber" required>
-      <label for="expiryDate">Fecha de Expiración:</label>
-      <input id="expiryDate" name="expiryDate" [(ngModel)]="paymentInfo.expiryDate" required>
-      <button type="submit">Pagar</button>
-    </form>
-  </div>
+
+  <section *ngIf="paymentMethod === 'Tarjeta'">
+    <div class="payment-step">
+      <h3>Pago con tarjeta</h3>
+      <app-confirm-step></app-confirm-step>
+      <form (ngSubmit)="onSubmit()">
+        <label for="cardNumber">Número de Tarjeta:</label>
+        <input id="cardNumber" name="cardNumber" [(ngModel)]="paymentInfo.cardNumber" required>
+        <label for="expiryDate">Fecha de Expiración:</label>
+        <input id="expiryDate" name="expiryDate" [(ngModel)]="paymentInfo.expiryDate" required>
+        <button type="submit">Pagar</button>
+      </form>
+    </div>
+  </section>
+
+  <section *ngIf="paymentMethod === 'Contra Reembolso'">
+    <div class="payment-step">
+      <h3>Pago Contra Reembolso</h3>
+
+        <p>Su pedido ha sido realizado con exito. En breve uno de mis conpañeros se pondra en contacto contigo con los datos facilitados. Darle al boton finalizar para volver al menu principal</p>
+
+      <app-confirmation-step></app-confirmation-step>
+    </div>
+  </section>
