el confirm-Step sera incluido en payment-step, por eso se le va a deshabilitar el boton next

--- a/src/app/cart/confirm-step/confirm-step.component.html
+++ b/src/app/cart/confirm-step/confirm-step.component.html
@@ -1,5 +1,7 @@
-<div class="confirmation">
-    <h3>Confirmar Pedido</h3>
+
+<section>
+  <div class="confirmation">
+
     <div>
       <h3>Datos Personales</h3>
       <p>Nombre: {{ personalInfo.name }}</p>
@@ -20,5 +22,7 @@
       </ul>
       <h3>Total a Pagar: {{ totalPrice }} €</h3>
     </div>
-    <button (click)="next()">Siguiente</button>
+    <!-- <button (click)="next()">Siguiente</button> -->
   </div>
+
+</section>
