--- a/src/app/cart/payment-step/payment-step.component.html
+++ b/src/app/cart/payment-step/payment-step.component.html
@@ -3,12 +3,35 @@
     <div class="payment-step">
       <h3>Pago con tarjeta</h3>
       <app-confirm-step></app-confirm-step>
-      <form (ngSubmit)="onSubmit()">
-        <label for="cardNumber">Número de Tarjeta:</label>
-        <input id="cardNumber" name="cardNumber" [(ngModel)]="paymentInfo.cardNumber" required>
-        <label for="expiryDate">Fecha de Expiración:</label>
-        <input id="expiryDate" name="expiryDate" [(ngModel)]="paymentInfo.expiryDate" required>
-        <button type="submit">Pagar</button>
+      <form [formGroup]="paymentForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="cardNumber">Número de Tarjeta:</label>
+          <input id="cardNumber" formControlName="cardNumber" placeholder="Ingrese el número de tarjeta">
+          <div *ngIf="paymentForm.get('cardNumber')?.invalid && paymentForm.get('cardNumber')?.touched" class="invalid-feedback">
+            <div *ngIf="paymentForm.get('cardNumber')?.hasError('required')">Número de Tarjeta es requerido</div>
+            <div *ngIf="paymentForm.get('cardNumber')?.hasError('pattern')">Número de Tarjeta debe tener 16 dígitos numéricos</div>
+          </div>
+        </div>
+      
+        <div class="form-group">
+          <label for="expiryDate">Fecha de Expiración (MM/YY):</label>
+          <input id="expiryDate" formControlName="expiryDate" placeholder="MM/YY">
+          <div *ngIf="paymentForm.get('expiryDate')?.invalid && paymentForm.get('expiryDate')?.touched" class="invalid-feedback">
+            <div *ngIf="paymentForm.get('expiryDate')?.hasError('required')">Fecha de Expiración es requerida</div>
+            <div *ngIf="paymentForm.get('expiryDate')?.hasError('pattern')">Fecha de Expiración debe estar en formato MM/YY</div>
+          </div>
+        </div>
+      
+        <div class="form-group">
+          <label for="cvv">CVV:</label>
+          <input id="cvv" formControlName="cvv" placeholder="Ingrese el CVV">
+          <div *ngIf="paymentForm.get('cvv')?.invalid && paymentForm.get('cvv')?.touched" class="invalid-feedback">
+            <div *ngIf="paymentForm.get('cvv')?.hasError('required')">CVV es requerido</div>
+            <div *ngIf="paymentForm.get('cvv')?.hasError('pattern')">CVV debe tener 3 dígitos numéricos</div>
+          </div>
+        </div>
+      
+        <button type="submit" [disabled]="!paymentForm.valid">Pagar</button>
       </form>
     </div>
   </section>
