Estructurar el contenido de los componente

--- a/src/app/cart/payment-step/payment-step.component.html
+++ b/src/app/cart/payment-step/payment-step.component.html
@@ -38,10 +38,7 @@
 
   <section *ngIf="paymentMethod === 'Contra Reembolso'">
     <div class="payment-step">
-      <h3>Pago Contra Reembolso</h3>
-
-        <p>Su pedido ha sido realizado con exito. En breve uno de mis conpañeros se pondra en contacto contigo con los datos facilitados. Darle al boton finalizar para volver al menu principal</p>
-
       <app-confirmation-step></app-confirmation-step>
+        <!-- <app-delivery></app-delivery> -->
     </div>
   </section>
