--- a/src/app/cart/confirmation-step/confirmation-step.component.html
+++ b/src/app/cart/confirmation-step/confirmation-step.component.html
@@ -1,24 +1,35 @@
-<div class="confirmation">
-  <h2>Confirmación</h2>
-  <div>
-    <h3>Datos Personales</h3>
-    <p>Nombre: {{ personalInfo.name }}</p>
-    <p>Dirección: {{ personalInfo.address }}</p>
-    <p>Email: {{ personalInfo.email }}</p>
-    <p>Teléfono: {{ personalInfo.phone }}</p>
-  </div>
-  
-  <div>
-    <h3>Artículos en el Carrito</h3>
-    <ul>
-      <li *ngFor="let item of cartItems" class="cart-item">
-        <div class="cart-item-details">
-          {{ item.name }} - Cantidad: {{ item.quantity }} - Peso: {{ item.weight }} kg - Precio: {{ item.price }} €
-        </div>
-      </li>
-    </ul>
-    <h3>Total a Pagar: {{ totalPrice }} €</h3>
-  </div>
+<section>
+  <div class="confirmation">
+    <h2>Confirmación</h2>
 
-  <button class="btn-finish" (click)="finishPurchase()">Finalizar</button>
-</div>
+    <div class="payment-step" *ngIf="personalInfo.paymentMethod === 'Contra Reembolso'">
+      <h3></h3>
+
+      <p>Su pedido ha sido realizado con exito. En breve uno de mis conpañeros se pondra en contacto contigo con los
+        datos facilitados. Darle al boton finalizar para volver al menu principal</p>
+
+    </div>
+    <div>
+      <h3>Datos Personales</h3>
+      <p>Nombre: {{ personalInfo.name }}</p>
+      <p>Dirección: {{ personalInfo.address }}</p>
+      <p>Email: {{ personalInfo.email }}</p>
+      <p>Teléfono: {{ personalInfo.phone }}</p>
+      <p>Modo de pago: {{personalInfo.paymentMethod}}</p>
+    </div>
+
+    <div>
+      <h3>Artículos en el Carrito</h3>
+      <ul>
+        <li *ngFor="let item of cartItems" class="cart-item">
+          <div class="cart-item-details">
+            {{ item.name }} - Cantidad: {{ item.quantity }} - Peso: {{ item.weight }} kg - Precio: {{ item.price }} €
+          </div>
+        </li>
+      </ul>
+      <h3>Total a Pagar: {{ totalPrice }} €</h3>
+    </div>
+
+    <button class="btn-finish" (click)="finishPurchase()">Finalizar</button>
+  </div>
+</section>
