--- a/src/app/about/activities/activities.component.html
+++ b/src/app/about/activities/activities.component.html
@@ -1,5 +1,5 @@
 <section>
-    <h2 class="title">Nuestros productos</h2>
+    <h2 class="title">{{ 'Our_Products'|translate }}</h2>
     <div class="container">
         <div class="flex-container-row">
 
