--- a/src/app/functionalities/add-cart/add-cart.component.html
+++ b/src/app/functionalities/add-cart/add-cart.component.html
@@ -8,6 +8,6 @@
                 </path>
             </svg>
         </span>
-        <p class="text">Add to Cart</p>
+        <p class="text">{{'Add_To_Cart'|translate}}</p>
     </button>
 </div>
