--- a/src/app/products/material-honey/details-material/details-material.component.html
+++ b/src/app/products/material-honey/details-material/details-material.component.html
@@ -19,7 +19,7 @@
                             </path>
                         </svg>
                     </span>
-                    <p class="text">Add to Cart</p>
+                    <p class="text">{{'Add_To_Cart'|translate}}</p>
                 </button>
             </section>
 
