--- a/src/app/products/details/details.component.html
+++ b/src/app/products/details/details.component.html
@@ -41,7 +41,7 @@
                       </path>
                   </svg>
               </span>
-              <p class="text">Add to Cart</p>
+              <p class="text">{{'Add_To_Cart'|translate}}</p>
           </button>
 
           </section>
