--- a/src/app/products/material-honey/material-honey.component.html
+++ b/src/app/products/material-honey/material-honey.component.html
@@ -12,6 +12,6 @@
               </path>
           </svg>
       </span>
-      <p class="text">Add to Cart</p>
+      <p class="text">{{'Add_To_Cart'|translate}}</p>
   </button>
   </section>
