--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -17,7 +17,7 @@
                     
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                            Learn More
+                            {{'Learn_More'|translate}}
                         </a>
                     </button>
                 </div>
@@ -36,7 +36,7 @@
                     
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/inzerki">
-                            Learn More
+                            {{'Learn_More'|translate}}
                         </a>
                     </button>
                 </div>
@@ -55,7 +55,7 @@
                     
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                            Learn More
+                            {{'Learn_More'|translate}}
                         </a>
                     </button>
                 </div>
@@ -76,7 +76,7 @@
                     
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                            Learn More
+                            {{'Learn_More'|translate}}
                         </a>
                     </button>
                 </div>
@@ -95,7 +95,7 @@
                     
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                            Learn More
+                            {{'Learn_More'|translate}}
                         </a>
                     </button>
                 </div>
@@ -119,7 +119,7 @@
                     
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                            Learn More
+                            {{'Learn_More'|translate}}
                         </a>
                     </button>
                 </div>
@@ -138,7 +138,7 @@
                     
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                            Learn More
+                            {{'Learn_More'|translate}}
                         </a>
                     </button>
                 </div>
@@ -157,7 +157,7 @@
                     
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                            Learn More
+                            {{'Learn_More'|translate}}
                         </a>
                     </button>
                 </div>
@@ -178,7 +178,7 @@
                     
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                            Learn More
+                            {{'Learn_More'|translate}}
                         </a>
                     </button>
                 </div>
@@ -197,7 +197,7 @@
                     
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                            Learn More
+                            {{'Learn_More'|translate}}
                         </a>
                     </button>
                 </div>
