--- a/src/app/housing-location/housing-location.component.html
+++ b/src/app/housing-location/housing-location.component.html
@@ -2,7 +2,7 @@
     <img class="listing-photo animated-img" [src]="housingLocation.photo" alt="Exterior photo of {{housingLocation.name}}">
     <h2 class="listing-heading">{{ housingLocation.name }}</h2>
     <p class="listing-location">{{ housingLocation.city}}, {{housingLocation.state }}</p>
-    <a [routerLink]="['/details', housingLocation.id]">Learn More</a>
+    <a [routerLink]="['/details', housingLocation.id]">{{'Learn_More'|translate}}</a>
     <button class="CartBtn" (click)="addToCart(housingLocation.id)">
       <span class="IconContainer">
           <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512" fill="rgb(17, 17, 17)"
