--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,8 +1,8 @@
 <div class="cart-container">
   <div class="steps">
-    <div class="step" [class.completed]="currentStep > 1">Carrito</div>
+    <div class="step" [class.completed]="currentStep > 1">{{'Cart.Title'|translate}}</div>
     <div class="step" [class.completed]="currentStep > 2">Validar</div>
-    <div class="step" [class.completed]="currentStep > 3">Datos Personales</div>
+    <div class="step" [class.completed]="currentStep > 3">{{'Cart.PersonalData.Title'|translate}}</div>
     <!-- <div class="step" [class.completed]="currentStep > 4">Confirmar</div>  -->
     <div class="step" [class.completed]="currentStep > 4">Pagar</div>
     <div class="step" [class.completed]="currentStep > 5">Confirmación</div>
